@@ -26,6 +26,7 @@ Version 6.7 - not yet released
   - update the calculator without a GPS fix (#2876)
   - fix task speed and time estimates before task start (#2876)
   - show "arm advance" button when manual arming is necessary
+  - support the OLC/DMSt 500km triangle threshold (#2963)
 * route planner
   - ignore inactive and acknowledged airspaces (#2866)
 * waypoint editor
